# IFramework

./: .gitignore  CMakeLists.txt
IObject/: IObject.cpp
IObject/internal/: tree.h
IObject/test/: IObject-Test.cpp  Makefile
OGL/Shader/: .Shader.h.swp  Shader.cpp  Shader.h
OGL/Texture/: Texture.h
UIService/: UIApplication.cpp  UIApplication.h  UIService.cpp  UIService.h
include/: IObject.h  UIApplication.h
include/CoreService/: IOService.h  UIService.h
include/OGL/: Camera.h  Shader.h  Texture.h
test/: IObject-Test.cpp  Makefile
